textsl in Formel

--- a/skript/mapreduce/mapreduce.tex
+++ b/skript/mapreduce/mapreduce.tex
@@ -309,11 +309,12 @@ u_8 \\
 
 
 \[
-\textsl{Eigenvektor}(u)=\dfrac{\textsl{Eigenvektor} \cdot \textsl{Matrix}}{\text{norm}(Eigenvektor\cdot Matrix)}
+\textsl{Eigenvektor}(u)=\dfrac{\textsl{Eigenvektor} \cdot \textsl{Matrix}}{\text{norm}(\textsl{Eigenvektor} \cdot \textsl{Matrix})}
 \]
 \[
 \textsl{Eigenwert}\footnote{Betragsm"assig gr"osster Eigenwert} = \textsl{Eigenvektor}^T \cdot \textsl{Matrix} \cdot \textsl{Eigenvektor}
 \]
+
 Die Potenzmethode wurde in einem vorherigen Kapitel behandelt. Darum
 wird hier nicht n"aher darauf eingegangen.
 
